package br.com.caio.padroes.criacionais.abstractfactory;

public interface Button {
    void paint();
}