package br.com.caio.padroes.criacionais.abstractfactory;

public interface Checkbox {
    void paint();
}