package br.com.caio.padroes.criacionais.abstractfactory;

public interface GUIFactory {
    Button createButton();
    Checkbox createCheckbox();
}